--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-certifi
-charset-normalizer 
-click             
-Flask              
-idna               
-itsdangerous       
-Jinja2             
-MarkupSafe                       
-requests           
-setuptools         
-tinydb             
-tomli              
-typing_extensions  
-urllib3            
-Werkzeug           
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+Flask==2.2.2
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+requests==2.28.1
+setuptools==59.6.0
+tinydb==4.7.0
+tomli==2.0.1
+typing_extensions==4.3.0
+urllib3==1.26.12
+Werkzeug==2.2.2
