--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 requests==2.28.1
+types-requests==2.28.11
 setuptools==59.6.0
 tinydb==4.7.0
 tomli==2.0.1
